# edgar_search_tool

./: .gitignore  LICENSE  README.md  edgar_accesing_data.txt  edgar_api_guide.txt  edgar_developer_resources.txt  main.py  pyproject.toml  requirements.txt  web_app.py
cache/company_lookup/: company_tickers.cache
cache/filing_data/: submissions_0000320193.cache
config/: constants.py  settings.py  sic_codes.py
data/: company_index.json  sec_tag_mapping.json
docs/: beta_module_scope.md  known_issues.md
edgar/: _extension_mappings.py  company_classifier.py  company_lookup.py  data_formatter.py  filing_retrieval.py  statement_extractor.py  tag_classifier.py  xbrl_instance.py  xbrl_parser.py
edgar/market_data/: __init__.py  yahoo.py
edgar/metrics/: __init__.py  _concepts.py  beta.py  derived_lines.py  growth.py  ltm.py  margins.py  ratios.py  registry.py  returns.py  working_capital.py
edgar_mcp/: __init__.py  __main__.py  server.py
scripts/: _capiq_profiles.py  extract_capiq_companies.py  gen_lockfile.py  inspect_capiq_comps.py  inspect_capiq_xlsx.py  inventory_capiq_sheets.py  parse_supported_metrics.py  reconcile_capiq_beta.py  reconcile_capiq_comps.py  reconcile_capiq_correlation.py  reconcile_capiq_screening.py  reconcile_capiq_valuation.py  smoke_test_metrics.py
utils/: cache.py  helpers.py  validators.py
